--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,25 +1,9 @@
 {
     "extends": "../tsconfig.base",
     "compilerOptions": {
-        "removeComments": true,
-        "module": "commonjs",
-        "moduleResolution": "node",
-        // "traceResolution": true,
-        // "baseUrl": "./modules"
+        "removeComments": true
     },
-    // "paths": {
-    //     "my_libs" : ["./customPath"]
-    // },
-    // "rootDirs": [
-    //     "modules",
-    //     "src",
-    //     "ts/modules"
-    // ],
-    "files": [
-        "./main.ts"
-    ],
-    // "include": [
-    //     "./**/*"
-    // ]
-
+    "include": [
+        "./**/*"
+    ]
 }
