chapter 4 final code

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,19 +2,8 @@
     "extends": "../tsconfig.base",
     "compilerOptions": {
         "removeComments": true,
-        "module": "commonjs",
-        "moduleResolution": "node",
-        // "traceResolution": true,
-        // "baseUrl": "./modules"
+        "outFile" : "../js/bundle.js"
     },
-    // "paths": {
-    //     "my_libs" : ["./customPath"]
-    // },
-    // "rootDirs": [
-    //     "modules",
-    //     "src",
-    //     "ts/modules"
-    // ],
     "files": [
         "./main.ts"
     ],
